--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 env\*
-todo\__pycache__\*
-todo\migrations\__pycache__\*
-todo_main\__pycache__\*
+todo/__pycache__/*
+todo/migrations/__pycache__/*
+todo_main/__pycache__/*
